[gd_scene load_steps=13 format=3 uid="uid://t4btvhtyh2ix"]

[ext_resource type="Texture2D" uid="uid://bm6rqdpjccy47" path="res://Assets/Combat/HealthFrame.png" id="2"]
[ext_resource type="Texture2D" uid="uid://0gn1lyufx5ck" path="res://Assets/2DScreens/PokemonScreen/slotMarker.png" id="2_yi63d"]
[ext_resource type="Texture2D" uid="uid://brso7011tsoga" path="res://Assets/Combat/GreenHealth.png" id="3"]
[ext_resource type="Texture2D" uid="uid://c70km7rys2j4f" path="res://Assets/2DScreens/PokemonScreen/slotMarkerHovered.png" id="3_21cec"]
[ext_resource type="Texture2D" uid="uid://c42xig1ltbi1m" path="res://Assets/2DScreens/PokemonScreen/PokemonIcons/BULBASAUR.png" id="3_cmy7v"]
[ext_resource type="Texture2D" uid="uid://g3jb7fhd8mwc" path="res://Assets/Combat/HealthUnder.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ldh2cvnkcse" path="res://Assets/2DScreens/PokemonScreen/gender_icons.png" id="5"]
[ext_resource type="FontFile" uid="uid://b55ek2u1muwn6" path="res://Assets/Fonts/m5x7.ttf" id="6"]
[ext_resource type="Texture2D" uid="uid://b3e4l1a7xwgc3" path="res://Assets/2DScreens/PokemonScreen/xpBar.png" id="7"]
[ext_resource type="Script" path="res://Scripts/2DScreens/PokemonScreen/PokeSlot.gd" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="PokeSlot" type="Node2D"]
scale = Vector2(1.8, 1.8)
script = ExtResource("8")

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.55556
offset_top = -8.33333
offset_right = 36.4444
offset_bottom = 2.66667
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.8, 3.8)
texture_normal = ExtResource("2_yi63d")
texture_hover = ExtResource("3_21cec")
ignore_texture_size = true
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="SlotMarker" type="Sprite2D" parent="."]
visible = false
position = Vector2(73.8889, 13.3333)
scale = Vector2(3.8, 3.8)
texture = ExtResource("2_yi63d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(13.5714, 12.8571)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_cmy7v")

[node name="GenderIcons" type="Sprite2D" parent="."]
position = Vector2(147.222, 10.5556)
texture = ExtResource("5")
hframes = 2

[node name="Name" type="RichTextLabel" parent="."]
offset_left = 34.7778
offset_top = -5.11111
offset_right = 388.778
offset_bottom = 31.8889
mouse_filter = 2
theme_override_fonts/normal_font = SubResource("1")
text = "Pisngalbyurslfhndsm"

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 32.0
offset_top = 10.0
offset_right = 112.0
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
max_value = 1000.0
value = 1000.0
texture_under = ExtResource("4")
texture_over = ExtResource("2")
texture_progress = ExtResource("3")

[node name="HealthNumber" type="RichTextLabel" parent="HealthBar"]
layout_mode = 0
offset_top = 13.3333
offset_right = 129.0
offset_bottom = 37.3333
scale = Vector2(1.5, 1.5)
mouse_filter = 2
theme_override_fonts/normal_font = SubResource("2")
text = "32/32
"

[node name="XPBar" type="TextureProgressBar" parent="."]
offset_left = 101.667
offset_top = 10.0
offset_right = 181.667
offset_bottom = 19.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
max_value = 1000.0
value = 1000.0
texture_under = ExtResource("4")
texture_over = ExtResource("2")
texture_progress = ExtResource("7")

[node name="Level" type="RichTextLabel" parent="XPBar"]
layout_mode = 0
offset_left = 1.74603
offset_top = 13.3333
offset_right = 130.746
offset_bottom = 37.3333
scale = Vector2(1.5, 1.5)
mouse_filter = 2
theme_override_fonts/normal_font = SubResource("2")
text = "Level: "
